# 3DViewer_CPP_V2.0

./: README.md
src/: Doxyfile  Makefile  main.cpp
src/controllers/: ViewerController.cc  ViewerController.h
src/models/: IObserver.h  ISubject.h  Object.cc  Object.h  ObjectReader.cc  ObjectReader.h  ObjectTransformer.cc  ObjectTransformer.h  Settings.cc  Settings.h  SettingsSaver.cc  SettingsSaver.h  Vertex.cc  Vertex.h
src/tests/: tests.cc  tests.h
src/tests/test_files/: test.obj1  test1.obj1  test2.obj1
src/view/: CMakeLists.txt  CMakeLists.txt.user.096e950  glwidget.cpp  glwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/view/3DViewer_autogen/EWIEGA46WW/: moc_mainwindow.cpp
src/view/3DViewer_autogen/include/: ui_mainwindow.h
src/view/gifmaker/: dgif_lib.c  egif_lib.c  gif_font.c  gif_hash.c  gifalloc.c  qgifimage.cpp  quantize.c
